--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.74.5",
     "react-native-dialog": "^9.3.0",
     "react-native-maps": "^1.17.3",
+    "react-native-reanimated": "^3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-vector-icons": "^10.1.0"
   },
