--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-datepicker": "^1.7.2",
-    "react-native-modal-datetime-picker": "^17.1.0"
+    "react-native-modal-datetime-picker": "^17.1.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
