--- a/package.json
+++ b/package.json
@@ -1,27 +1,35 @@
 {
-  "name": "dcw_g6",
-  "version": "1.0.0",
-  "main": "expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/stack": "^6.4.1",
-    "expo": "~51.0.24",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.3",
-    "react-native-datepicker": "^1.7.2",
-    "react-native-modal-datetime-picker": "^17.1.0",
-    "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0"
-  },
-  "private": true
+    "name": "dcw_g6",
+    "version": "1.0.0",
+    "main": "expo/AppEntry.js",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web"
+    },
+    "dependencies": {
+        "@react-navigation/bottom-tabs": "^6.6.1",
+        "@react-navigation/native": "^6.1.18",
+        "@react-navigation/stack": "^6.4.1",
+        "@reduxjs/toolkit": "^2.2.7",
+        "expo": "~51.0.24",
+        "expo-status-bar": "~1.12.1",
+        "react": "18.2.0",
+        "react-native": "0.74.5",
+        "react-native-dialog": "^9.3.0",
+        "react-native-maps": "^1.17.3",
+        "react-native-reanimated": "^3.10.1",
+        "react-native-reanimated-carousel": "^3.5.1",
+        "react-native-safe-area-context": "^4.10.8",
+        "react-native-screens": "^3.34.0",
+        "react-native-vector-icons": "^10.1.0",
+        "react-redux": "^9.1.2",
+        "react-native-datepicker": "^1.7.2",
+        "react-native-modal-datetime-picker": "^17.1.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.24.0"
+    },
+    "private": true
 }
