--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
         "expo-status-bar": "~1.12.1",
         "react": "18.2.0",
         "react-native": "0.74.5",
+        "react-native-datepicker": "^1.7.2",
         "react-native-dialog": "^9.3.0",
-        "react-native-maps": "^1.17.3",
+        "react-native-modal-datetime-picker": "^17.1.0",
         "react-native-reanimated": "^3.10.1",
         "react-native-reanimated-carousel": "^3.5.1",
         "react-native-safe-area-context": "^4.10.8",
         "react-native-screens": "^3.34.0",
         "react-native-vector-icons": "^10.1.0",
         "react-redux": "^9.1.2",
-        "react-native-datepicker": "^1.7.2",
-        "react-native-modal-datetime-picker": "^17.1.0"
+        "expo-location": "~17.0.1"
     },
     "devDependencies": {
         "@babel/core": "^7.24.0"
